--- a/my-app/Chart.yaml
+++ b/my-app/Chart.yaml
@@ -3,4 +3,5 @@ name: my-app
 description: A Helm chart for a Student application
 type: application
 version: 0.1.0
-appVersion: "1.0.0"
+appVersion: 1.0.0
+
